Fix #51 search button alignment
Closes #51

--- a/components/FilterableSearch/style.module.scss
+++ b/components/FilterableSearch/style.module.scss
@@ -21,6 +21,7 @@ $height: 32px;
     padding: $size-md;
     background: $color-limerick;
     cursor: pointer;
+    line-height: 1;
   }
 
   &__dropdown-toggle {
